Fix sliders bugs  [CLOUDFRONT-10185]
Squashed commit of the following:

commit 4f89aa5bcabc75b884556d8a60180b6f38d073e9
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Thu May 12 17:07:59 2022 +0300

    Fix paddings [CLOUDFRONT-10185]

commit 285a2a3b34330aa2e84933618e5d65d1cea57291
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Thu May 12 16:25:31 2022 +0300

    Fix shadow for mobile. Fix paddings [CLOUDFRONT-10185]

commit a5b203b8b1f34a6665d1ff8d9c2e53594fc065f5
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Thu May 12 14:44:21 2022 +0300

    Fix one dot [CLOUDFRONT-10185]

commit 058e1f12f907c66a7d09b24b20075f060213ae34
Merge: a38ba13 ca1c832
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Thu May 12 11:25:42 2022 +0300

    Merge branch 'master' of ssh://bb.yandex-team.ru/data-ui/page-constructor into aeksandla/CLOUDFRONT-10185/sliders-bugs

commit a38ba1365740af49bea43709cc0dca88ea792c84
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Fri May 6 17:19:12 2022 +0300

    Fix padding [CLOUDFRONT-10370]

commit d2026a69f8189d951ac3c9090b8462b7824dd82b
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Fri May 6 14:19:32 2022 +0300

    Fix one slide [CLOUDFRONT-10185]

commit bbe5a73d30997c5fd8773663951ede7718a0b2b0
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Fri May 6 14:18:20 2022 +0300

    Fix dots. Fix one slide [CLOUDFRONT-10185]

--- a/src/blocks/Slider/Slider.scss
+++ b/src/blocks/Slider/Slider.scss
@@ -287,12 +287,6 @@ $block: '.#{$ns}SliderBlock';
     }
 
     @media (max-width: map-get($gridBreakpoints, 'sm')) {
-        .slick-track {
-            .slick-slide {
-                max-width: calc(100vw - (#{$indentXS} + #{$indentS}));
-            }
-        }
-
         &:not(&_one-slide) {
             margin-left: -$indentXS;
             padding-left: $indentXS;
@@ -306,9 +300,10 @@ $block: '.#{$ns}SliderBlock';
 
             .slick-slide {
                 padding: 0 $slideOffset;
+                max-width: calc(100vw - (#{$indentXS} + #{$indentS}));
 
                 &:last-child {
-                    padding-right: 0;
+                    padding: 0 $indentXS 0 $slideOffset;
                 }
             }
         }
